codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 6388
expression: terminal.backend()
---
"                                                                                "
" WECODE  • Booting MCP server: alpha [0s • esc interrupt]                       "
"                                                                                "
"┌ WECODE ──────────────────────────────────────────────────────────────────────┐"
"~ Ask wecode to inspect, edit, test, or explain                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ? help                                                     100% context left  "
