codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2154
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan (disabled)  Switch to Default and start coding.
                                          (disabled: Default mode unavailable)
  2. No, stay in Plan mode                Continue planning with the model.

  Press enter to confirm or esc to go back
