codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 6221
expression: terminal.backend()
---
"                                                                                "
" WECODE  • Analyzing [0s • esc interrupt]                                       "
"                                                                                "
"┌ WECODE ──────────────────────────────────────────────────────────────────────┐"
"~ Ask wecode to inspect, edit, test, or explain                                │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ? help                                                     100% context left  "
