codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_swarm_subagent_progress.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 6275
expression: terminal.backend()
---
"                                                                                                    "
" WECODE  • Clarifying swarm mode collaboration strategy [0s • esc interrupt]                        "
"  └ Riley_assistant: Cross-checking overflow behavior                                               "
"    casey_assistant: Checking ordering and cap behavior                                             "
"    morgan_assistant: Drafting snapshot coverage…                                                   "
"                                                                                                    "
"┌ WECODE ──────────────────────────────────────────────────────────────────────────────────────────┐"
"~ Ask wecode to inspect, edit, test, or explain                                                    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"  ? help                                                                         100% context left  "
